Minik, şirin değişiklikler.

--- a/HelpDesk.Web/Views/Failure/Invoice.cshtml
+++ b/HelpDesk.Web/Views/Failure/Invoice.cshtml
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="text-center no-print">
                                     <a class="btn btn-primary btn-lg" onClick="jQuery('#page-content').print()">
-                                        <i class="fa fa-print"></i> Print
+                                        <i class="fa fa-print"></i> Yazdır
                                     </a>
                                 </div>
                             </div>
@@ -122,5 +122,6 @@
 <!--End page content-->
 
 @section bottom{
-    <script src="/assets/plugins/jquery-print/jQuery.print.js"></script>
+    <script src="~/assets/js/jquery-2.1.1.min.js"></script>
+    <script src="~/assets/plugins/jquery-print/jQuery.print.js"></script>
 }
