--- a/HelpDesk.Web/Views/Shared/_Layout.cshtml
+++ b/HelpDesk.Web/Views/Shared/_Layout.cshtml
@@ -97,6 +97,7 @@
         <script src="~/assets/plugins/datatables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
         <script src="~/assets/plugins/screenfull/screenfull.js"></script>
         <script src="~/assets/js/notify.min.js"></script>
+        <script src="~/assets/plugins/jquery-print/jQuery.print.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
